apps/netronome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netronome
  namespace: netronome
  labels:
    app: netronome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netronome
  template:
    metadata:
      labels:
        app: netronome
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: netronome
          image: ghcr.io/autobrr/netronome:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7575
          securityContext:
            capabilities:
              add:
                - NET_RAW
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: netronome-data
