apps/netronome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netronome
  namespace: netronome
spec:
  type: ClusterIP
  selector:
    app: netronome
  ports:
    - name: http
      port: 80
      targetPort: http
